# Spectr

./: .clang-format  .gitignore  CMakeLists.txt  README.md  dependencies.cmake
.github/workflows/: cmake-single-platform.yml  codeql.yml  msvc.yml
resource/: myplugineditor.uidesc
source/: AudioRingBuffer.h  SpectrCIds.h  SpectrController.cpp  SpectrController.h  SpectrEditor.cpp  SpectrEditor.h  SpectrEntry.cpp  SpectrProcessor.cpp  SpectrProcessor.h  conf.h  mypluginentry.cpp  version.h
source/Engine/Analyzer/: SpectralDensity.cpp  SpectralDensity.h
source/Engine/Pipeline/: INode.cpp  INode.h  Pipeline.cpp  Pipeline.h
source/UI/: CSpectrogramView.h  SpectrogramView.h
source/Utils/: Logger.cpp  Logger.h
